--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<div style="display:flex;flex-direction:column; text-align: center">
 				<h2>Réfugiés, demandeurs d'asile, déplacés internes... les mots comptent. </h2>
 				<div class="row 200%">	
-						<section class="4u 12u$(small)">
+						<section class="4u 12u$(small)" style ="text-align: center" >
 							<font color="#24292E"> 
 							<p><b>Un réfugié </b> est une personne qui se trouve hors du pays 
 								dont elle a la nationalité ou dans lequel elle a sa résidence habituelle,
@@ -131,11 +131,11 @@
 								ne peut se réclamer de la protection de ce pays ou en raison de ladite 
 								crainte ne peut y retourner”. </p>  </font>
 						</section>
-                        <section class="4u 12u$(small)">
+                        <section class="4u 12u$(small)" style ="text-align: center">
 				<font color="#24292E"> 
 							<p>Un réfugié est un ancien <b>demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. </p>
 					 </font>	</section>
-						<section class="4u$ 12u$(small)">
+						<section class="4u$ 12u$(small)" style ="text-align: center">
 						<font color="#24292E"> 	<p>Contrairement aux réfugiés, les <b>déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. </p>
 						 </font> </section>
 					</div>
