--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 			<link rel="stylesheet" href="css/animate.css" />
 			 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 			<link rel="stylesheet" href="css/style-xlarge.css" />
+			<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
 		</noscript>
 		
 		<link rel="icon" href="globo.ico" type="image/x-icon">
