--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <div class="container">
 <div style="background-color:  transparent; border:5px solid white;border-radius: 25px;margin-bottom: 10px; padding: 8px 8px 8px 8px"> 
 	<h2 style="color:#000000"> Crise des migrants ou crise des réfugiés? </h2>
-<div style="color:#000000; text-align: justify;c;">	
+<div style="color:#000000; text-align: justify;">	
 	On a souvent parlé de "crise des migrants" pour décrire cet afflux de personnes fuyant la guerre en Syrie qui arrivent sur les côtes européennes. Mais, petit à petit, de plus en plus d'associations, de journalistes, d'hommes et de femmes politiques ont plaidé pour l'utilisation du terme "réfugié". <br>
 	En effet, le mot "migrant" est un terme générique qui désigne une personne qui migre, que ce soit pour des raisons économiques ou politiques, alors que le mot "réfugié" renvoie à une migration politique pour cause de conflit notamment, et, <i> in fine </i>, fait référence au droit d'asile. <br>
 	<br> <p> La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des responsabilités différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. En revanche, les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales.
@@ -120,13 +120,13 @@
 			
 			<!-- <section id="menu" class="wrapper style1 align-center"> -->
 				<!-- <div class="container"> -->
-						<div style="display:flex;flex-direction:column; text-align: center">
+						<div style="display:flex;flex-direction:column; text-align: justify;text-justify: inter-word;">
 				<h2>Réfugiés, demandeurs d'asile, déplacés internes... les mots comptent. </h2>
 				<div class="row 200%" >	
 						<section class="4u 12u$(small)" style ="text-justify: inter-word" >
 							 <i class="icon big rounded fa-bar-chart"></i>
 							<font color="#24292E"> 
-							<p><b>Un réfugié </b> est une personne qui se trouve hors du pays 
+							<p style="text-align: justify;text-justify: inter-word;" ><b>Un réfugié </b> est une personne qui se trouve hors du pays 
 								dont elle a la nationalité ou dans lequel elle a sa résidence habituelle,
 								et qui “du fait de sa race, de sa religion, de sa nationalité, 
 								de son appartenance à un groupe social déterminé 
@@ -134,14 +134,14 @@
 								ne peut se réclamer de la protection de ce pays ou en raison de ladite 
 								crainte ne peut y retourner”. </p>  </font>
 						</section>
-                        <section class="4u 12u$(small)" style ="text-justify: inter-word">
+                        <section class="4u 12u$(small)" style ="text-align: justify;text-justify: inter-word;">
 					 <i class="icon big rounded fa-id-card-o" aria-hidden="true"></i>
 				<font color="#24292E"> 
-							<p>Un réfugié est un ancien <b>demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. </p>
+							<p style="text-align: justify;text-justify: inter-word;">Un réfugié est un ancien <b>demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. </p>
 					 </font>	</section>
 						<section class="4u$ 12u$(small)" style ="text-justify: inter-word">
 						 <i class="icon big rounded fa-bar-chart"></i>
-						<font color="#24292E"> 	<p>Contrairement aux réfugiés, les <b>déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. </p>
+						<font color="#24292E"> 	<p style="text-align: justify;text-justify: inter-word;">Contrairement aux réfugiés, les <b>déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. </p>
 						 </font> </section>
 					</div>
 				</div>
