--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			</div>
 			<br>
 			<!-- Graphe intro Irène -->
-			<h2> Eclairage sur la situation mondiale en un graphe </h2>	
+			<h2> Eclairage sur la situation mondiale en un graphique </h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column; text-align: center">
 				<div> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans (UNHCR).</font> </div>
@@ -120,8 +120,9 @@
 			
 			<!-- <section id="menu" class="wrapper style1 align-center"> -->
 				<!-- <div class="container"> -->
+								<h2>Réfugiés, demandeurs d'asile, déplacés internes... les mots comptent. </h2>
+
 						<div style="display:flex;flex-direction:column; text-align: justify;text-justify: inter-word;">
-				<h2>Réfugiés, demandeurs d'asile, déplacés internes... les mots comptent. </h2>
 				<div class="row 200%" >	
 						<section class="4u 12u$(small)" style ="text-justify: inter-word" >
 							 <i class="icon big rounded fa-bar-chart"></i>
