--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		
+		<!-- Choisir vignette facebook -->
+		
+		<meta property="og:image" content="min.jpg">
+<meta property="og:image:type" content="image/jpg">
+ <meta property="og:image:width" content="3523">
+ <meta property="og:image:height" content="2372">
+
+		
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script> 
 		<!--<script src="https://code.jquery.com/jquery-1.11.0.js"></script>-->
