--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Choisir vignette facebook -->
 		
 		<meta property="og:image" content="min.jpg">
-<meta property="og:image:type" content="image/jpg">
+<meta property="og:image:type" content="image/jpeg">
  <meta property="og:image:width" content="3523">
  <meta property="og:image:height" content="2372">
 
