--- a/index.html
+++ b/index.html
@@ -92,14 +92,30 @@
 <div style="background-color:  transparent; border:5px solid white;border-radius: 25px;margin-bottom: 10px; padding: 8px 8px 8px 8px"> 
 	<h2 style="color:#000000"> Crise des migrants ou crise des réfugiés? </h2>
 <div style="color:#000000; text-align: justify;">	
-	On a souvent parlé de "crise des migrants" pour décrire cet afflux de personnes fuyant la guerre en Syrie qui arrivent sur les côtes européennes. Mais, petit à petit, de plus en plus d'associations, de journalistes, d'hommes et de femmes politiques ont plaidé pour l'utilisation du terme "réfugié". <br>
-	En effet, le mot "migrant" est un terme générique qui désigne une personne qui migre, que ce soit pour des raisons économiques ou politiques, alors que le mot "réfugié" renvoie à une migration politique pour cause de conflit notamment, et, <i> in fine </i>, fait référence au droit d'asile. <br>
-	<br> <p> La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des responsabilités différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. En revanche, les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales.
-	Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.</p> 
-	En particulier, les réfugiés doivent être accueillis quelle que soit leur situation économique. La création d'un statut à part avait pour vocation de protéger systématiquement les personnes confrontés à des situations dramatiques dans leur pays d'origine. Toutefois, certains travaux en sociologie, et notamment l'article de Katy Long <a href="https://academic.oup.com/migration/article/1/1/4/940995/When-refugees-stopped-being-migrants-Movement">"When refugees stopped being migrants" (2013)</a>, montrent que l'apparition d'un statut à part de réfugié empê	
-	che une intégration économique durable, qui mobilise d'autres moyens que l'assistance humanitaire.
+	On a souvent parlé de "crise des migrants" pour décrire cet afflux de personnes fuyant la guerre en Syrie qui arrivent sur 
+	les côtes européennes. Mais, petit à petit, de plus en plus d'associations, de journalistes, d'hommes et de femmes politiques
+	ont plaidé pour l'utilisation du terme "réfugié". <br>
+	En effet, le mot "migrant" est un terme générique qui désigne une personne qui migre, que ce soit pour des raisons économiques
+	ou politiques, alors que le mot "réfugié" renvoie à une migration politique pour cause de conflit notamment, et, <i> in fine </i>, fait référence au droit d'asile. <br>
 	<br> 
-	Sur cette page, nous nous efforcerons donc de décrire les situations différentes dans lesquelles se trouvent les personnes en migration, ainsi que les différents statuts juridiques auxquels elles peuvent accéder. Nous nous concentrerons plus particulièrement sur les demandeurs d'asile, et retracerons la chronologie des principaux événements de cette crise des migrants et des réfugiés.  
+	<p> La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des responsabilités
+	différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière 
+	d’immigration. En revanche, les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux 
+	réfugiés qui sont définies dans les lois nationales et les lois internationales.
+	Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des
+	réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies,
+	dont tous les pays de l’Union européenne.</p> 
+	En particulier, les réfugiés doivent être accueillis quelle que soit leur situation économique.
+	La création d'un statut à part avait pour vocation de protéger systématiquement les personnes confrontées à des 
+	situations dramatiques dans leur pays d'origine. Toutefois, certains travaux en sociologie, et notamment l'article de
+	Katy Long <a href="https://academic.oup.com/migration/article/1/1/4/940995/When-refugees-stopped-being-migrants-Movement">
+	"When refugees stopped being migrants" (2013)</a>, montrent que l'apparition d'un statut à part de réfugié empêche
+	une intégration économique durable, qui mobilise d'autres moyens que l'assistance humanitaire.
+	<br> 
+	Sur cette page, nous nous efforcerons donc de décrire les situations différentes dans lesquelles se trouvent les
+	personnes en migration, ainsi que les différents statuts juridiques auxquels elles peuvent accéder. 
+	Nous nous concentrerons plus particulièrement sur les demandeurs d'asile, et retracerons la chronologie des principaux 
+	événements de cette crise des migrants et des réfugiés.  
 </div>
 </div>
 			</div>
@@ -924,7 +940,7 @@ $(document).ready(function(){
 			<li><a href ="https://www.ideas-box.org/index.php/fr/"><b>Ideas Box de Bibliothèques sans Frontières </b> </a> est une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain (Jordanie, Colombie, Ethiopie, la région des Grands Lacs..et aussi en France). Un dispositif robuste et autonome énergétiquement qui propose un contenu adapté aux besoins des populations, à leur langue et leur culture.
 Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 pour inviter à voter pour le projet d’Ideas Box de Bibliothèque Sans Frontières, au Google Impact Challenge. Il a également fait son stage d’ouverture chez BSF.</li>
 			<br>
-			<li><a href="http://www.ensae.org/global/gene/link.php?doc_id=1243&fg=1"><b>Sebastiao Salgado </b></a> (inscrit à l’ENSAE en 1969) : le grand photographe d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. </li><br>	
+			<li><a href="http://www.ensae.org/global/gene/link.php?doc_id=1243&fg=1"><b>Sebastiao Salgado </b></a> (ENSAE 1969) : le grand photographe d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. </li><br>	
 			</ul>
 			</div>
 			</div>
