--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </a>
     
     <!-- LinkedIn -->
-                    <a href='https://www.linkedin.com/shareArticle?mini=true&url=http://pregoles.github.io/migmig&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target='_blank'>
+                    <a href='https://www.linkedin.com/shareArticle?mini=true&url=http://pregoles.github.io/migmig&title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target='_blank'>
                         <img width="50" height="50" src="images/linkedin.png" alt="LinkedIn" />
                     </a>
                     
