--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<header id="header">
 				
                 <div id='buttons'>
-                    <a href="https://www.facebook.com/sharer.php?u=https://pregoles.github.io/migmig&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees" target="_blank">
+                    <a href='https://www.facebook.com/sharer.php?u=https://pregoles.github.io/migmig&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target="_blank">
                             <img width="50" height="50" src="images/facebook.png" alt="Facebook" />
                     </a>
                     
