--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 		<meta name="keywords" content="" />
 		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		
+		<meta property="og:image" content="https://github.com/Pregoles/migmig/blob/master/images/J1.jpeg">
+		<meta property="og:image:type" content="image/jpeg">
+		<meta property="og:image:width" content="3523">
+		<meta property="og:image:height" content="2372">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script> 
 		<!--<script src="https://code.jquery.com/jquery-1.11.0.js"></script>-->
 		<script src="https://code.highcharts.com/highcharts.js"></script>
