--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<div style="font-size: 200px;">
 				<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 				</div>
-				<h2 class="animated" style="color:#004953">Lumière sur les migrations</h2>
+				<h2 class="animation" style="color:#004953">Lumière sur les migrations</h2>
 				<h3 style="color:#004953">Déchiffrer la "crise des migrants" en Europe et en France </h3>
 				<p></p>
                 				
