--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 						<div style="display:flex;flex-direction:column; text-align: justify;text-justify: inter-word;">
 				<div class="row 200%" >	
 						<section class="4u 12u$(small)" style ="text-justify: inter-word" >
-							 <i class="fa fa-bomb"></i>
+							 <i class="icon big rounded fa fa-bomb"></i>
 							<font color="#24292E"> 
 							<p style="text-align: justify;text-justify: inter-word;" ><b>Un réfugié </b> est une personne qui se trouve hors du pays 
 								dont elle a la nationalité ou dans lequel elle a sa résidence habituelle,
@@ -172,7 +172,7 @@
 								crainte ne peut y retourner”. </p>  </font>
 						</section>
                         <section class="4u 12u$(small)" style ="text-align: justify;text-justify: inter-word;">
-					 <i class="fa fa-id-card-o" aria-hidden="true"></i>
+					 <i class="icon big rounded fa fa-id-card-o" aria-hidden="true"></i>
 				<font color="#24292E"> 
 							<p style="text-align: justify;text-justify: inter-word;">Un réfugié est un ancien <b>demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. </p>
 					 </font>	</section>
