--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 								crainte ne peut y retourner”. </p>  </font>
 						</section>
                         <section class="4u 12u$(small)" style ="text-align: justify;text-justify: inter-word;">
-					 <i class="icon big rounded fa fa-id-card-o" aria-hidden="true"></i>
+					 <i class="icon big rounded fa fa-user-circle-o" aria-hidden="true"></i>
 				<font color="#24292E"> 
 							<p style="text-align: justify;text-justify: inter-word;">Un réfugié est un ancien <b>demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. </p>
 					 </font>	</section>
