--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
 <div style="color:#000000; text-align: justify;">	
 	On a souvent parlé de "crise des migrants" pour décrire cet afflux de personnes fuyant la guerre en Syrie qui arrivent sur 
 	les côtes européennes. Mais, petit à petit, de plus en plus d'associations, de journalistes, d'hommes et de femmes politiques
-	ont plaidé pour l'utilisation du terme "réfugié". <br>
-	En effet, le mot "migrant" est un terme générique qui désigne une personne qui migre, que ce soit pour des raisons économiques
+	ont plaidé pour l'utilisation du terme "réfugié". En effet, le mot "migrant" est un terme générique qui désigne une personne qui migre, que ce soit pour des raisons économiques
 	ou politiques, alors que le mot "réfugié" renvoie à une migration politique pour cause de conflit notamment, et, <i> in fine </i>, fait référence au droit d'asile. <br>
 	<br> 
 	<p> La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des responsabilités
@@ -133,7 +132,7 @@
 	"When refugees stopped being migrants" (2013)</a>, montrent que l'apparition d'un statut à part de réfugié empêche
 	une intégration économique durable, qui mobilise d'autres moyens que l'assistance humanitaire.
 	<br> 
-	Sur cette page, nous nous efforcerons donc de décrire les situations différentes dans lesquelles se trouvent les
+	Sur cette page, nous décrirons les différentes situations dans lesquelles se trouvent les
 	personnes en migration, ainsi que les différents statuts juridiques auxquels elles peuvent accéder. 
 	Nous nous concentrerons plus particulièrement sur les demandeurs d'asile, et retracerons la chronologie des principaux 
 	événements de cette crise des migrants et des réfugiés.  
