--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 	Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des
 	réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies,
 	dont tous les pays de l’Union européenne.</p> 
-	En particulier, les réfugiés doivent être accueillis quelle que soit leur situation économique.
+	<p>En particulier, les réfugiés doivent être accueillis quelle que soit leur situation économique.
 	La création d'un statut à part avait pour vocation de protéger systématiquement les personnes confrontées à des 
 	situations dramatiques dans leur pays d'origine. Toutefois, certains travaux en sociologie, et notamment l'article de
 	Katy Long <a href="https://academic.oup.com/migration/article/1/1/4/940995/When-refugees-stopped-being-migrants-Movement">
 	"When refugees stopped being migrants" (2013)</a>, montrent que l'apparition d'un statut à part de réfugié empêche
-	une intégration économique durable, qui mobilise d'autres moyens que l'assistance humanitaire.
-	<br> 
+	une intégration économique durable, qui mobilise d'autres moyens que l'assistance humanitaire.</p>
+	
 	Sur cette page, nous décrirons les différentes situations dans lesquelles se trouvent les
 	personnes en migration, ainsi que les différents statuts juridiques auxquels elles peuvent accéder. 
 	Nous nous concentrerons plus particulièrement sur les demandeurs d'asile, et retracerons la chronologie des principaux 
