--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 				<div class="row 200%" >	
 						<section class="4u 12u$(small)" style ="text-justify: inter-word" >
 							 <i class="icon big rounded fa fa-bomb"></i>
-							<font color="#24292E"> 
+							<font color="#24292E">
 							<p style="text-align: justify;text-justify: inter-word;" ><b>Un réfugié </b> est une personne qui se trouve hors du pays 
 								dont elle a la nationalité ou dans lequel elle a sa résidence habituelle,
 								et qui “du fait de sa race, de sa religion, de sa nationalité, 
@@ -170,7 +170,7 @@
 								ne peut se réclamer de la protection de ce pays ou en raison de ladite 
 								crainte ne peut y retourner”. </p>  </font>
 						</section>
-					         <section class="4u 12u$(small)">
+					         <section class="4u 12u$(small)" style ="text-justify: inter-word" >
 						 <i class="icon big rounded fa fa-user-o"></i>
 						<p>Un réfugié est un ancien <b>demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. </p>
 						</section>
