--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						<div style="display:flex;flex-direction:column; text-align: justify;text-justify: inter-word;">
 				<div class="row 200%" >	
 						<section class="4u 12u$(small)" style ="text-justify: inter-word" >
-							 <i class="icon big rounded fa fa-bomb"></i>
+							<center> <i class="icon big rounded fa fa-bomb"></i> </center>
 							<font color="#24292E">
 							<p style="text-align: justify;text-justify: inter-word;" ><b>Un réfugié </b> est une personne qui se trouve hors du pays 
 								dont elle a la nationalité ou dans lequel elle a sa résidence habituelle,
@@ -183,7 +183,7 @@
 					 </font>	</section>
 -->
 						<section class="4u$ 12u$(small)" style ="text-justify: inter-word">
-						 <i class="icon big rounded fa fa-child"></i>
+						 <center> <i class="icon big rounded fa fa-child"></i> </center>
 						<font color="#24292E"> 	<p style="text-align: justify;text-justify: inter-word;">Contrairement aux réfugiés, les <b>déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. </p>
 						 </font> </section>
 					</div>
